5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1715_3036.log
== TEST (2019-05-02 16:23:22) 
-- CODE:
x = float(input("digite o valor de x: "))

if x <= -1 or x >= 1:
	print(x)
-- ERROR:
File "XXXX", line 3
    if (x==1):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:23:53) 
-- CODE:
x = float(input("digite o valor de x: "))

if x <= -1 or x >= 1:
	print(x)
-- ERROR:
File "XXXX", line 3
    if (x==1):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:18) 
-- CODE:
x = float(input("digite o valor de x: "))

if x <= -1 or x >= 1:
	print(x)
if (x > -1 and x < 0) or (x > 0 and x < 1):
	print(1)
if (x == 0):
	print(2)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:50) 
-- CODE:
x = float(input("digite o valor de x: "))

if x <= -1 or x >= 1:
	print(round(x,2)
if (x > -1 and x < 0) or (x > 0 and x < 1):
	print(1)
if (x == 0):
	print(2)
-- ERROR:
File "XXXX", line 5
    if (x > -1 and x < 0) or (x > 0 and x < 1):
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:25:56) 
-- CODE:
x = float(input("digite o valor de x: "))

if x <= -1 or x >= 1:
	print(round(x,2))
if (x > -1 and x < 0) or (x > 0 and x < 1):
	print(1)
if (x == 0):
	print(2)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:26:04) 
-- CODE:
x = float(input("digite o valor de x: "))

if x <= -1 or x >= 1:
	print(round(x,2))
if (x > -1 and x < 0) or (x > 0 and x < 1):
	print(1)
if (x == 0):
	print(2)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:26:09) 
-- CODE:
x = float(input("digite o valor de x: "))

if x <= -1 or x >= 1:
	print(round(x,2))
if (x > -1 and x < 0) or (x > 0 and x < 1):
	print(1)
if (x == 0):
	print(2)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:26:11) 
-- CODE:
x = float(input("digite o valor de x: "))

if x <= -1 or x >= 1:
	print(round(x,2))
if (x > -1 and x < 0) or (x > 0 and x < 1):
	print(1)
if (x == 0):
	print(2)
-- EXECUTION TIME:
0.197701
-- TEST CASE 1:
---- input:
-0.59
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
0.99
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
-1.01
---- correct output:
-1.01
---- user output:
-1.01
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
